fixing: hero section button spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -369,6 +369,10 @@ section {
   }
 }
 
+.hero__left a span {
+  margin-right: 9px;
+}
+
 .hero__right {
   width: 50%;
   height: 300px;
