--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -38,6 +38,11 @@
         padding-bottom: 40px;
       }
     }
+    a{
+      span{
+        margin-right: 9px;
+      }
+    }
   }
   &__right {
     width: 50%;
